--- a/login.html
+++ b/login.html
@@ -18,12 +18,12 @@
             <img src="image/logo.png" alt="Logo">
             <div class="field">
               <div class="control">
-                <input class="input is-medium is-rounded" type="email" placeholder="hello@example.com" autocomplete="username" required />
+                <input class="input is-medium is-rounded" type="text" placeholder="dani" autocomplete="username" id="username" required />
               </div>
             </div>
             <div class="field">
               <div class="control">
-                <input class="input is-medium is-rounded" type="password" placeholder="**********" autocomplete="current-password" required />
+                <input class="input is-medium is-rounded" type="password" placeholder="**********" autocomplete="current-password" id="password" required />
               </div>
             </div>
             <br />
@@ -47,6 +47,8 @@
         </div>
       </div>
     </section>
+    
+    <script type="module" src="./js/post.js"></script>
   </body>
 
 </html>
