--- a/login.html
+++ b/login.html
@@ -18,16 +18,16 @@
             <img src="image/logo.png" alt="Logo">
             <div class="field">
               <div class="control">
-                <input class="input is-medium is-rounded" type="text" placeholder="dani" autocomplete="username" id="username" required />
+                <input class="input is-medium is-rounded" type="text" placeholder="dani" autocomplete="username" id="username" value="dani" required />
               </div>
             </div>
             <div class="field">
               <div class="control">
-                <input class="input is-medium is-rounded" type="password" placeholder="**********" autocomplete="current-password" id="password" required />
+                <input class="input is-medium is-rounded" type="password" placeholder="**********" autocomplete="current-password" id="password" value="secret" required />
               </div>
             </div>
             <br />
-            <button class="button is-block is-fullwidth is-primary is-medium is-rounded" type="submit">
+            <button class="button is-block is-fullwidth is-primary is-medium is-rounded" type="submit" id="button" onclick="PostSignUp()">
               Login
             </button>
           </form>   
