--- a/login.html
+++ b/login.html
@@ -1,54 +1,60 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Form Login</title>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://unpkg.com/bulma@0.9.4/css/bulma.min.css" />
-    <link rel="stylesheet" type="text/css" href="css/login.css">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Form Login</title>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/bulma@0.9.4/css/bulma.min.css" />
+  <link rel="stylesheet" type="text/css" href="css/login.css">
+</head>
 
-  <body>
-    <section class="hero is-fullheight">
-      <div class="hero-body has-text-centered">
-        <div class="login">
-            <img src="image/logo.png" alt="Logo">
-            <div class="field">
-              <div class="control">
-                <input class="input is-medium is-rounded" type="text" placeholder="dani" autocomplete="username" id="username" value="dani" required />
-              </div>
-            </div>
-            <div class="field">
-              <div class="control">
-                <input class="input is-medium is-rounded" type="password" placeholder="**********" autocomplete="current-password" id="password" value="secret" required />
-              </div>
-            </div>
-            <br />
-            <button class="button is-block is-fullwidth is-primary is-medium is-rounded" type="submit" id="button" onclick="PostSignUp()">
-              Login
-            </button>
-          </form>   
-          <br>
-          <nav class="level">
-            <div class="level-item has-text-centered">
-              <div>
-                <a href="#">Forgot Password?</a>
-              </div>
-            </div>
-            <div class="level-item has-text-centered">
-              <div>
-                <a href="register.html">Create an Account</a>
-              </div>
-            </div>
-          </nav>
+<body>
+  <section class="hero is-fullheight">
+    <div class="hero-body has-text-centered">
+      <div class="login">
+        <img src="image/logo.png" alt="Logo">
+        <div class="field">
+          <div class="control">
+            <input class="input is-medium is-rounded" type="text" placeholder="dani" autocomplete="username"
+              id="username" value="dani" required />
+          </div>
         </div>
+        <div class="field">
+          <div class="control">
+            <input class="input is-medium is-rounded" type="password" placeholder="**********"
+              autocomplete="current-password" id="password" value="secret" required />
+          </div>
+        </div>
+        <br />
+        <button class="button is-block is-fullwidth is-primary is-medium is-rounded" type="submit" id="button"
+          onclick="PostSignUp()">
+          Login
+        </button>
+        </form>
+        <br>
+        <nav class="level">
+          <div class="level-item has-text-centered">
+            <div>
+              <a href="#">Forgot Password?</a>
+            </div>
+          </div>
+          <div class="level-item has-text-centered">
+            <div>
+              <a href="register.html">Create an Account</a>
+            </div>
+          </div>
+        </nav>
       </div>
-    </section>
-    
-    <script type="module" src="./js/post.js"></script>
-  </body>
+      <div class="container">
+        <div class="notification is-primary" id="pesan"></div>
+      </div>
+    </div>
+  </section>
+
+  <script type="module" src="./js/post.js"></script>
+</body>
 
 </html>
