--- a/dashboard.html
+++ b/dashboard.html
@@ -92,12 +92,15 @@
     </footer>
   </div>
 
-  <script>
+  <script type="module">
     // Nama cookie yang akan diperiksa
+
+
+    import { getCookie } from "https://jscroot.github.io/cookie/croot.js";
     const cookieName = "token";
 
     // Periksa apakah cookie ada dengan menggunakan fungsi dari file cookieUtil.js
-    if (!isCookieExist(cookieName)) {
+    if (!getCookie(cookieName)) {
       // Jika cookie tidak ada, arahkan kembali ke halaman login
       window.location.href = "login.html";
     }
