--- a/404.html
+++ b/404.html
@@ -30,21 +30,16 @@
     <script>
         // window.location.href = "https://trensentimen.github.io/apps/404.html";
         // Mendapatkan URL saat ini
-        const currentURL = window.location.href;
+        const fullURL = window.location.href;
+        // const fullURL = "https://trensentimen.github.io/apps/dashboard.html/dsddashboard.htmldashboard.html";
 
-        // Membuat URL objek untuk mengakses komponen-komponen URL
-        const url = new URL(currentURL);
+        // Mencari indeks pertama '/' setelah "https://"
+        const firstSlashIndex = fullURL.indexOf("/", 8); // Angka 8 adalah panjang "https://"
 
-        // Mengambil protokol, domain, dan direktori (pathname)
-        const protocol = url.protocol;
-        const domain = url.hostname;
-        const path = url.pathname;
-
-        // Menggabungkan protokol, domain, dan direktori
-        const baseURL = protocol + "//" + domain + path;
+        // Mengambil bagian URL hingga indeks pertama '/'
+        const baseURL = fullURL.substring(0, firstSlashIndex);
 
         console.log(baseURL);
-
         // set href pada button
         document.getElementById("button").href = baseURL + "dashboard.html";
     </script>
