--- a/dashboard.html
+++ b/dashboard.html
@@ -32,7 +32,8 @@
         <div class="navbar-menu">
           <div class="navbar-start"><a class="navbar-item" href="#">About</a><a class="navbar-item"
               href="#">Company</a><a class="navbar-item" href="#">Services</a><a class="navbar-item"
-              href="#">Testimonials</a></div>
+              href="#">Testimonials </a>
+            <a class="navbar-item" href="logout.html" onclick="confirm('anda yakin akan logout?')">Logout</a></div>
           <div class="navbar-item">
             <div class="field has-addons">
               <div class="control">
@@ -92,7 +93,7 @@
     </footer>
   </div>
 
-  <script type="module">
+  <!-- <script type="module">
     // Nama cookie yang akan diperiksa
 
 
@@ -104,7 +105,7 @@
       // Jika cookie tidak ada, arahkan kembali ke halaman login
       window.location.href = "login.html";
     }
-  </script>
+  </script> -->
 </body>
 
 </html>
