--- a/dashboard.html
+++ b/dashboard.html
@@ -33,7 +33,7 @@
           <div class="navbar-start"><a class="navbar-item" href="#">About</a><a class="navbar-item"
               href="#">Company</a><a class="navbar-item" href="#">Services</a><a class="navbar-item"
               href="#">Testimonials </a>
-            <a class="navbar-item" href="logout.html" onclick="logout()">Logout</a></div>
+            <a class="navbar-item" href="#" onclick="logout()">Logout</a></div>
           <div class="navbar-item">
             <div class="field has-addons">
               <div class="control">
