--- a/login.html
+++ b/login.html
@@ -50,6 +50,7 @@
           </div>
         </nav>
       </div>
+        <div class="notification is-primary" id="pesan"></div>
     </div>
   </section>
 
