--- a/login.html
+++ b/login.html
@@ -50,7 +50,9 @@
           </div>
         </nav>
       </div>
+      <div class="container">
         <div class="notification is-primary" id="pesan"></div>
+      </div>
     </div>
   </section>
 
