--- a/dashboard.html
+++ b/dashboard.html
@@ -78,15 +78,15 @@
           <div class="py-2 is-hidden-tablet"></div>
           <div class="ml-auto">
             <a class="mr-4 is-inline-block" href="#">
-              <img src="../images/app-page/socials/facebook.svg" alt=""></a>
+              <img src="image/fb.jpeg" alt=""></a>
             <a class="mr-4 is-inline-block" href="#">
-              <img src="../images/app-page/socials/twitter.svg" alt=""></a>
+              <img src="image/tweet.png" alt=""></a>
             <a class="mr-4 is-inline-block" href="#">
-              <img src="../images/app-page/socials/github.svg" alt=""></a>
+              <img src="image/git.png" alt=""></a>
             <a class="mr-4 is-inline-block" href="#">
-              <img src="../images/app-page/socials/instagram.svg" alt=""></a>
+              <img src="image/ig.jpeg" alt=""></a>
             <a class="is-inline-block" href="#">
-              <img src="../images/app-page/socials/linkedin.svg" alt=""></a>
+              <img src="image/linkedin.png" alt=""></a>
           </div>
         </div>
       </div>
