--- a/dashboard.html
+++ b/dashboard.html
@@ -77,6 +77,13 @@
           <p>All rights reserved © My App 20XX</p>
           <div class="py-2 is-hidden-tablet"></div>
           <div class="ml-auto">
+            <style>
+              /* Atur ukuran ikon */
+              .icon {
+                width: 20px; /* Atur lebar ikon */
+                height: 20px; /* Atur tinggi ikon */
+              }
+            </style>
             <a class="mr-4 is-inline-block" href="#">
               <img src="image/fb.jpeg" alt=""></a>
             <a class="mr-4 is-inline-block" href="#">
