--- a/dashboard.html
+++ b/dashboard.html
@@ -77,23 +77,16 @@
           <p>All rights reserved © My App 20XX</p>
           <div class="py-2 is-hidden-tablet"></div>
           <div class="ml-auto">
-            <style>
-              /* Atur ukuran ikon */
-              .icon {
-                width: 20px; /* Atur lebar ikon */
-                height: 20px; /* Atur tinggi ikon */
-              }
-            </style>
             <a class="mr-4 is-inline-block" href="#">
-              <img src="image/fb.jpeg" alt=""></a>
+              <img src="image/fb.jpeg" alt="facebook" width="50" height="50"></a>
             <a class="mr-4 is-inline-block" href="#">
-              <img src="image/tweet.png" alt=""></a>
+              <img src="image/tweet.png" alt="tweet" width="50" height="50"></a>
             <a class="mr-4 is-inline-block" href="#">
-              <img src="image/git.png" alt=""></a>
+              <img src="image/git.png" alt="facebook" width="50" height="50"></a>
             <a class="mr-4 is-inline-block" href="#">
-              <img src="image/ig.jpeg" alt=""></a>
+              <img src="image/ig.jpeg" alt="facebook" width="50" height="50"></a>
             <a class="is-inline-block" href="#">
-              <img src="image/linkedin.png" alt=""></a>
+              <img src="image/linkedin.png" alt="facebook" width="50" height="50"></a>
           </div>
         </div>
       </div>
