--- a/profile.html
+++ b/profile.html
@@ -32,7 +32,7 @@
         <div class="navbar-menu">
           <div class="navbar-start">
             <a class="navbar-item" href="#">About</a>
-            <a class="navbar-item" href="#">Company</a>
+            <a class="navbar-item" href="profile.html">Profile</a>
             <a class="navbar-item" href="#">Services</a>
             <a class="navbar-item"href="#">Testimonials </a>
             <a class="navbar-item"href="profile.html">Profile </a>
